# auditly-pypi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
auditly/: __main__.py  cli.py  dep_tree.py  env_scanner.py  explain.py  file_scanner.py  osv_client.py  reporter.py  risk.py  subdep_scanner.py  utils.py
tests/: manual_env_scan.py  manual_file_scan.py  manual_full_flow.py  manual_osv_check.py  manual_risk_score.py  test.py
