[project]
name = "auditly"
version = "0.1.0"
description = "Advanced Python dependency vulnerability scanner"
authors = [{ name = "Krishna Tadi" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "requests"
]

[project.scripts]
auditly = "auditly.cli:main"
